<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/design_default_color_primary"
            app:navigationIcon="@android:drawable/ic_menu_revert"
            app:navigationIconTint="@color/design_default_color_on_primary"
            app:title="Settings"
            app:titleTextColor="@color/design_default_color_on_primary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/changeButton"
        app:layout_constraintEnd_toStartOf="@id/verticalBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout" />

    <android.widget.Button
        android:id="@+id/changeButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:onClick="changeAvatar"
        android:text="@string/change_avatar"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/horizontalBarrier"
        app:layout_constraintEnd_toStartOf="@id/verticalBarrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImageView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/verticalBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="surnameView,nameView" />

    <EditText
        android:id="@+id/nameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/surnameView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalBarrier"
        app:layout_constraintTop_toBottomOf="@id/AppBarLayout" />

    <EditText
        android:id="@+id/surnameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/surname_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/horizontalBarrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalBarrier"
        app:layout_constraintTop_toBottomOf="@id/nameView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/horizontalBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="changeButton,nameView,avatarImageView,surnameView"
        tools:layout_editor_absoluteY="525dp" />

    <EditText
        android:id="@+id/addressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/cellularView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalBarrier" />

    <EditText
        android:id="@+id/cellularView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/cellular_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/emailView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressView" />

    <EditText
        android:id="@+id/emailView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/languageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cellularView" />

    <TextView
        android:id="@+id/languageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Language"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailView" />

    <android.widget.Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="SAVE CHANGES"
        android:onClick="saveChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageView" />

</androidx.constraintlayout.widget.ConstraintLayout>